--- a/roles/kube-node/templates/kubelet.j2
+++ b/roles/kube-node/templates/kubelet.j2
@@ -18,4 +18,4 @@ KUBELET_HOSTNAME="--hostname-override={{NODE_IP}}"
 KUBELET_POD_INFRA_CONTAINER="--pod-infra-container-image={{REGISTRY_IP}}:8082/pod-infrastructure:rhel7"
 #
 ## Add your own!
-KUBELET_ARGS="--cgroup-driver=cgroupfs --runtime-cgroups=/systemd/system.slice --kubelet-cgroups=/systemd/system.slice --cluster-dns=10.254.0.2 --bootstrap-kubeconfig=/etc/kubernetes/bootstrap.kubeconfig --kubeconfig=/etc/kubernetes/kubelet.kubeconfig --cert-dir=/etc/kubernetes/ssl --cluster-domain=cluster.local --hairpin-mode promiscuous-bridge --serialize-image-pulls=false --fail-swap-on=false"
+KUBELET_ARGS="--cgroup-driver=cgroupfs --runtime-cgroups=/systemd/system.slice --kubelet-cgroups=/systemd/system.slice --cluster-dns={{CLUSTER_DNS_SVC_IP}} --bootstrap-kubeconfig=/etc/kubernetes/bootstrap.kubeconfig --kubeconfig=/etc/kubernetes/kubelet.kubeconfig --cert-dir=/etc/kubernetes/ssl --cluster-domain=cluster.local --hairpin-mode promiscuous-bridge --serialize-image-pulls=false --fail-swap-on=false"
